fix z-index issue with popup over slideshow

--- a/sites/all/themes/picsforpets/css/style.css
+++ b/sites/all/themes/picsforpets/css/style.css
@@ -1692,7 +1692,7 @@ a.footer-furtography {
   height: 120px;
   margin-top: -123px;
   position: relative;
-  z-index: 1000px;
+  z-index: 100px;
   display: block;
   padding-top: 20px;
 }
@@ -1733,7 +1733,7 @@ a.footer-furtography {
   height: 120px;
   width: 120px;
   margin-left: -120px;
-  z-index: 1000;
+  z-index: 100;
   position: relative;
   margin-top: 140px;
   display: inline;
@@ -1746,7 +1746,7 @@ a.footer-furtography {
   width: 198px;
   margin-left: -198px;
   margin-top: 100px;
-  z-index: 1006;
+  z-index: 106;
   position: relative;
   display: inline;
   float: left;
@@ -1771,7 +1771,7 @@ a.footer-furtography {
   float: left;
   margin-left: -50px;
   margin-top: 100px;
-  z-index: 1005;
+  z-index: 105;
   position: relative;
 }
 
@@ -1785,7 +1785,7 @@ a.footer-furtography {
   padding-bottom: 0;
   display: inline;
   float: left;
-  z-index: 1010;
+  z-index: 110;
   position: relative;
   min-height: 780px;
 }
@@ -1828,7 +1828,7 @@ a.footer-furtography {
   float: left;
   margin-left: -90px;
   margin-top: 100px;
-  z-index: 1005;
+  z-index: 105;
   position: relative;
 }
 
@@ -1859,7 +1859,7 @@ a.footer-furtography {
   margin-top: 180px;
   display: inline;
   float: left;
-  z-index: 1010;
+  z-index: 110;
   position: relative;
   font-size: 42px;
   font-weight: bold;
@@ -1873,11 +1873,15 @@ a.footer-furtography {
   margin-top: 180px;
   display: inline;
   float: left;
-  z-index: 1010;
+  z-index: 110;
   position: relative;
   font-size: 42px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.views-ui-dialog .ui-dialog-titlebar-close {
+  z-index: 200;
 }
 
 /* LAYOUT -------------------------------------------------------------- */
