--- a/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
+++ b/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
@@ -269,7 +269,7 @@ a.footer-furtography
   height: 120px
   margin-top: -123px
   position: relative
-  z-index: 1000px
+  z-index: 100px
   display: block
   padding-top: 20px
   a
@@ -311,7 +311,7 @@ a.footer-furtography
   height: 120px
   width: 120px
   margin-left: -120px
-  z-index: 1000
+  z-index: 100
   position: relative
   margin-top: 140px
   +float-left
@@ -322,7 +322,7 @@ a.footer-furtography
   width: 198px
   margin-left: -198px
   margin-top: 100px
-  z-index: 1006
+  z-index: 106
   position: relative
   +float-left
 
@@ -342,7 +342,7 @@ a.footer-furtography
   +float-left
   margin-left: -50px
   margin-top: 100px
-  z-index: 1005
+  z-index: 105
   position: relative
 
 #slideshow-center
@@ -353,7 +353,7 @@ a.footer-furtography
   padding: 10px
   padding-bottom: 0
   +float-left
-  z-index: 1010
+  z-index: 110
   position: relative
   min-height: 780px
   #slideshow-center
@@ -387,7 +387,7 @@ a.footer-furtography
   +float-left
   margin-left: -90px
   margin-top: 100px
-  z-index: 1005
+  z-index: 105
   position: relative
 
 .pane-entity-field
@@ -414,7 +414,7 @@ a.footer-furtography
   margin-left: -130px
   margin-top: 180px
   +float-left
-  z-index: 1010
+  z-index: 110
   position: relative
   font-size: 42px
   font-weight: bold
@@ -426,13 +426,14 @@ a.footer-furtography
   margin-right: -130px
   margin-top: 180px
   +float-left
-  z-index: 1010
+  z-index: 110
   position: relative
   font-size: 42px
   font-weight: bold
   cursor: pointer
 
-
+.views-ui-dialog .ui-dialog-titlebar-close
+  z-index: 200
 
 
 
